<resources>
    <string name="app_name">Pixtory</string>
    <string name="title_activity_app">pixtory</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="title_activity_pdpread">PDPReadActivity</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="title_activity_home_feed">HomeFeedActivity</string>

    <string name="app_id">1207785742565519</string>

    <string-array name="feedback_array">
        <item>I liked this</item>
        <item>I disliked this</item>
        <item>I am reporting a problem</item>
    </string-array>
    <string-array name="category_array">
        <item>Onboarding flow</item>
        <item>Main feed of full screen images</item>
        <item>Video playing full screen</item>
        <item>Video playing smaller screen</item>
        <item>Product details</item>
        <item>Profile screen</item>
    </string-array>
    <string-array name="subcategory_array">
        <item>Video buffering or not playing</item>
        <item>Images not loading</item>
        <item>App sluggish while scrolling</item>
        <item>App not responding on action</item>
        <item>Layout looks messed up</item>
        <item>Other</item>

    </string-array>

    <string-array name="menu_items">
        <item>My Profile</item>
        <item>Feedback</item>
        <item>Invite Friends</item>
        <item>Settings</item>
    </string-array>


    <string name="post_your_comment">POST YOUR COMMENT</string>
    <string name="character_limit">CHARACTERS</string>
    <string name="comment_textbox_hint">What do you have to say about this pixtory</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="skip_login">skip login</string>
    <string name="sign_in_fb">Sign in with Facebook</string>

    <string name="send_feedback">Send feedback</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="mail_feedback_email">karum@pixtory.in</string>
    <string name="mail_feedback_subject">Feedback on your app, Pixtory</string>
    <string name="mail_feedback_message">Hi,
\n\nYour Pixtory app is awesome! I would like to give you some feedback:</string>
    <string name="follow">Follow</string>
    <string name="contribute_text">Become a contributor and share your incredible Pixtories! Our team will reach out to you with more information.</string>
    <string name="login_text">To save your preferences, please log in</string>
    <string name="login_text_2">Connect through one of the following ways</string>
    <string name="fb_login">Connect with Facebook</string>
    <string name="wallpaper_coach_mark_text">Long press on an image to set it as your wallpaper</string>
    <string name="swipe_up_coach_mark_text">Swipe up to read the full story</string>
    <string name="wallpaper_text">Stunning wallpapers.\nHandpicked.\nEveryday.\n\nWould you like to try it?</string>
    <string name="wallpaper_changed_text">Daily wallpaper set. \n\nYou\'ll now have a new wallpaper every day</string>
    <string name="wallpaper_text_2">Everyday, we\'ll refresh your phone\'s wallpaper to a gorgeous new image curated by us. You can always turn it off in your settings.</string>
    <string name="swipe_up_coach_mark_text_2">A story is the photographer\'s experience, emotion, inspiration or expression behind the picture.</string>
    <string name="set_as_wallpaper">Set image as your wallpaper</string>
    <string name="daily_wallpaper">Set up Daily Wallpapers</string>
    <string name="set_as_wallpaper_today">Set this as Wallpaper today</string>
</resources>
